rannacherturekdir = $(includedir)/dune/localfunctions/rannacherturek

rannacherturek_HEADERS = rannacherturek2d.hh \
			 rannacherturek.hh \
			 rannachertureklocalbasis.hh \
			 rannachertureklocalcoefficients.hh \
			 rannachertureklocalinterpolation.hh

SUBDIRS = rannacherturek2d rannacherturek3d

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
