raviartthomasdir = $(includedir)/dune/localfunctions/raviartthomas

raviartthomas_HEADERS = raviartthomas02d.hh \
                        raviartthomas12d.hh \
	raviartthomas0cube2d.hh raviartthomas0cube3d.hh \
	raviartthomas1cube2d.hh raviartthomas1cube3d.hh \
  raviartthomas2cube2d.hh \
  raviartthomas3cube2d.hh \
  raviartthomas4cube2d.hh \
	raviartthomascube.hh \
	raviartthomassimplex.hh

SUBDIRS = \
	raviartthomas02d \
	raviartthomas0cube2d raviartthomas0cube3d \
	raviartthomas12d \
	raviartthomas1cube2d raviartthomas1cube3d \
  raviartthomas2cube2d \
  raviartthomas3cube2d \
  raviartthomas4cube2d \
	raviartthomassimplex

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
